--- a/build-tools/packages/build-cli/package.json
+++ b/build-tools/packages/build-cli/package.json
@@ -106,7 +106,8 @@
 		"sort-package-json": "1.57.0",
 		"strip-ansi": "^6.0.1",
 		"table": "^6.8.1",
-		"type-fest": "^2.19.0"
+		"type-fest": "^2.19.0",
+		"type-plus": "^7.6.0"
 	},
 	"devDependencies": {
 		"@fluid-internal/readme-command": "workspace:*",
