--- a/build-tools/packages/build-cli/package.json
+++ b/build-tools/packages/build-cli/package.json
@@ -125,6 +125,8 @@
 		"@types/prompts": "^2.4.4",
 		"@types/semver": "^7.5.0",
 		"@types/semver-utils": "^1.1.1",
+    "@types/sinon": "^10.0.16",
+    "@types/sinon-chai": "^3.2.9",
 		"@types/sort-json": "^2.0.1",
 		"chai": "^4.3.7",
 		"chai-arrays": "^2.2.0",
@@ -141,7 +143,10 @@
 		"moment": "^2.29.4",
 		"nyc": "^15.1.0",
 		"rimraf": "^4.4.1",
+    "sinon": "^15.2.0",
+    "sinon-chai": "^3.7.0",
 		"ts-node": "^10.9.1",
+    "ts-sinon": "^2.0.2",
 		"tslib": "^2.6.0",
 		"typescript": "~4.5.5"
 	},
