--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
 		"clean:docs": "rimraf --glob \"**/_api-extractor-temp\" \"docs/api/*/**\"",
 		"clean:nyc": "rimraf --glob \"nyc/**\"",
 		"clean:r11s": "cd server/routerlicious && npm run clean",
-		"format": "npm run prettier:root:fix && pnpm run -r --no-sort --stream format",
+		"format": "npm run prettier:repo:fix",
 		"format:changed": "npm run format:changed:main",
 		"format:changed:main": "pretty-quick --branch main",
 		"format:changed:next": "pretty-quick --branch next",
