--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
 		"generate:packageList:public": "flub list --no-private -g client --feed public > feeds/public.txt",
 		"preinstall": "node scripts/only-pnpm.cjs",
 		"layer-check": "flub check layers --info layerInfo.json",
-		"lint": "npm run syncpack:deps && npm run syncpack:versions && npm run prettier:root && npm run build:eslint",
-		"lint:fix": "npm run syncpack:deps:fix && npm run syncpack:versions:fix && npm run prettier:root:fix && pnpm run -r --no-sort --stream lint:fix",
+		"lint": "npm run syncpack:deps && npm run syncpack:versions && npm run prettier && npm run build:eslint",
+		"lint:fix": "npm run syncpack:deps:fix && npm run syncpack:versions:fix && npm run prettier:fix && pnpm run -r --no-sort --stream lint:fix",
 		"policy-check": "flub check policy --excludeHandler npm-package-json-script-jest-config",
 		"policy-check-help": "echo Detect (and error on) policy-check violations, like package.json sorting, copyright headers etc. Excludes assert-short-code. Run the check or \"pnpm flub check policy --listHandlers\" for a full list.",
 		"policy-check:asserts": "flub check policy --handler assert-short-codes --fix && pretty-quick",
@@ -63,10 +63,8 @@
 		"policy-check:fix-help": "echo Fix policy-check violations excludes assert-short-code/",
 		"prettier": "npm run prettier:repo",
 		"prettier:fix": "npm run prettier:repo:fix",
-		"prettier:repo": "prettier --check . --ignore-path ./.prettierignore",
-		"prettier:repo:fix": "prettier --write . --ignore-path ./.prettierignore",
-		"prettier:root": "prettier --check ./*.* --ignore-path .prettierignore",
-		"prettier:root:fix": "prettier --write ./*.* --ignore-path .prettierignore",
+		"prettier:repo": "prettier --check . --ignore-path ./.prettierignore --ignore-unknown",
+		"prettier:repo:fix": "prettier --write . --ignore-path ./.prettierignore --ignore-unknown",
 		"restart": "cd server/routerlicious && npm run restart",
 		"start:docker": "docker-compose -f server/docker-compose.yml up",
 		"stop:docker": "docker-compose -f server/docker-compose.yml down",
