--- a/build-tools/packages/build-tools/tsconfig.json
+++ b/build-tools/packages/build-tools/tsconfig.json
@@ -13,6 +13,12 @@
 		"strictPropertyInitialization": true,
 		"target": "es2018",
 		"types": ["node"],
+		"module": "ESNext",
+
+		// settings required to use swc
+		"isolatedModules": true,
+		"verbatimModuleSyntax": true,
+		"esModuleInterop": true,
 	},
 	"include": ["src/**/*.ts"],
 	"exclude": ["src/test/**/*", "dist", "node_modules"],
