--- a/experimental/dds/attributable-map/tsconfig.json
+++ b/experimental/dds/attributable-map/tsconfig.json
@@ -1,11 +1,13 @@
 {
-	"extends": "@fluidframework/build-common/ts-common-config.json",
+	"extends": [
+		"../../../common/build/build-common/tsconfig.base.json",
+		"../../../common/build/build-common/tsconfig.cjs.json",
+	],
+	"include": ["src/**/*"],
+	"exclude": ["src/test/**/*"],
 	"compilerOptions": {
-		"composite": true,
 		"rootDir": "./src",
 		"outDir": "./dist",
 		"types": ["node"],
 	},
-	"include": ["src/**/*"],
-	"exclude": ["src/test/**/*"],
 }
