--- a/experimental/framework/last-edited/tsconfig.json
+++ b/experimental/framework/last-edited/tsconfig.json
@@ -1,9 +1,12 @@
 {
-	"extends": "@fluidframework/build-common/ts-common-config.json",
+	"extends": [
+		"../../../common/build/build-common/tsconfig.base.json",
+		"../../../common/build/build-common/tsconfig.cjs.json",
+	],
+	"include": ["src/**/*"],
 	"exclude": ["dist", "node_modules"],
 	"compilerOptions": {
 		"rootDir": "./src",
 		"outDir": "./dist",
 	},
-	"include": ["src/**/*"],
 }
